kubernetes/apps/dev/debug/podinfo/app/network/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo
  namespace: apps-debug
  labels:
    app: podinfo
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - podinfo.xonery.dev
      secretName: podinfo-tls
  rules:
    - host: podinfo.xonery.dev
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: podinfo
                port:
                  number: 9898
